[gd_scene load_steps=3 format=2]

[ext_resource path="res://xArchives/Button_sail.gd" type="Script" id=1]
[ext_resource path="res://art/GUI/Etext.png" type="Texture" id=2]

[node name="Button" type="StaticBody2D" groups=[
"Clickable",
]]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[connection signal="input_event" from="." to="." method="_on_Button_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
